gccida/c0/reload_combine_note_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9429:1: error: use of undeclared identifier '$46E27178171750CEF28E8B43DEBEAD96'
$46E27178171750CEF28E8B43DEBEAD96 *v12; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9429:36: error: use of undeclared identifier 'v12'
$46E27178171750CEF28E8B43DEBEAD96 *v12; // rcx 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9503:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9504:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9517:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 8994, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9524:30: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
offset = (  struct rtx_def *)x[1]; 
                             ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9529:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 9015, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9568:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9569:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9578:1: error: use of undeclared identifier 'v12'
v12 = &reg_state[regno_0]; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9579:7: error: use of undeclared identifier 'v12'
v13 = v12->use_index - 1; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/reload1.c:9580:1: error: use of undeclared identifier 'v12'
v12->use_index = v13; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine_note_use/src/obj/reload1.o] Error 1
